@@ -892,7 +892,6 @@ END
     }
 }
 
-# cab - nice help message ! ;)
 sub exit_usage
 {
 	use Pod::Usage;
