@@ -2,6 +2,12 @@
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  28 Apr 2007; Michael Cummings <mcummings@gentoo.org> Makefile.PL,
+  bin/g-cpan, lib/Gentoo/UI/Console.pm:
+  Updating to reflect findings from Perl::Critic; in the process identified and
+  corrected a minor bug with the cleanup routine when permissions weren't
+  sufficient.
+
   05 Apr 2007; Michael Cummings <mcummings@gentoo.org> ChangeLog:
   Quick fix for search results of 0
 
